--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+appdirs==1.4.4
 attrs==20.3.0
 click==7.1.2
 coverage==5.5
+distlib==0.3.1
+filelock==3.0.12
 flake8==3.8.4
 Flask==1.1.2
 iniconfig==1.1.1
@@ -16,5 +19,7 @@ pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.2
 pytest-cov==2.11.1
+six==1.15.0
 toml==0.10.2
+virtualenv==20.4.3
 Werkzeug==1.0.1
